# chess-ml

./: .gitignore  model.pth  pyproject.toml
src/neural_net/: cell_dataset.py  dataset.py  main.py  neural_net.py  test.py  test_model.py  training.py
src/neural_net/models/: 2023-11-25_20-37-25_model.pth
src/neural_net/transforms/: pre-transform.py
src/neural_net/transforms/training_images/: _fens.txt
src/neural_net/utils/: fen_string_to_target.py  piece_to_target.py  target_to_ascii_board.py
src/state_generator/: add_coordinates_to_board.py  fen_to_image_generator.py  generate_test_images.py  generate_training_images.py
src/state_generator/full_image_set/: generate_training_images.py
src/state_generator/full_image_set/output_full_boards/testing_images/: _fens.txt
src/state_generator/single_cell_set/: generate_images.py
src/state_generator/utils/: record_execution_time.py
tutorial_quickstart/: main.py  test_nn.py  train.py  training_data.py
