[tool.poetry]
name = "chess-ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.1"
torchvision = "^0.16.1"
torchaudio = "^2.1.1"
ruff = "^0.1.6"
matplotlib = "^3.8.2"
opencv-python = "^4.8.1.78"
chess = "^1.10.0"
fentoimage = "^0.1.0"
drawsvg = "^2.3.0"

[[tool.poetry.packages]]
include = "./src/chess-ml.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
